unpackaged/main/default/objects/BAFE__c/BAFE__c.object-meta.xml
<CustomObject>
    <label>BAFE</label>
    <nameField>
        <label>BAFE #</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BAFE</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>