unpackaged/main/default/objects/BAFE__c/fields/BAFE_Amount__c.field-meta.xml
<CustomField>
    <fullName>BAFE_Amount__c</fullName>
    <label>BAFE Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>