unpackaged/main/default/objects/BAFE__c/fields/BAFE_Balance__c.field-meta.xml
<CustomField>
    <fullName>BAFE_Balance__c</fullName>
    <label>BAFE Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>