unpackaged/main/default/objects/BAFE__c/fields/BAFE_Status__c.field-meta.xml
<CustomField>
    <fullName>BAFE_Status__c</fullName>
    <label>BAFE Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>