unpackaged/main/default/objects/BAFE__c/fields/BAFE_Year__c.field-meta.xml
<CustomField>
    <fullName>BAFE_Year__c</fullName>
    <label>BAFE Year</label>
    <type>Date</type>
</CustomField>