unpackaged/main/default/objects/BAFE__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BAFE_Status__c</columns>
    <columns>BAFE_Balance__c</columns>
    <columns>BAFE_Amount__c</columns>
    <columns>BAFE_Year__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>